--- a/PROJETOPORTIFOLIO/index.html
+++ b/PROJETOPORTIFOLIO/index.html
@@ -69,23 +69,45 @@
                 <div class="flex">
                     <div class="especialidades-box">
                         <i class="bi bi-controller"></i>
-                        <h3>Game Developer</h3>
-                        <p>As a game developer specializing in level design, I craft interactive and challenging environments for players to explore and progress through the game's narrative.</p>
+                        <h3>Interactive World</h3>
+                        <p>My work involves creating vibrant worlds, captivating characters, and challenging gameplay mechanics that keep players entertained for hours on end. As I tackle technical and creative challenges, I also relish in the satisfaction of seeing players get lost in the universes I've helped to create.</p>
                     </div><!--especialidades-box-->
                     
                     <div class="especialidades-box">
                         <i class="bi bi-cart3"></i>
-                        <h3>Online store</h3>
-                        <p>As an e-commerce development specialist, I conceive and implement robust and customized digital solutions, empowering businesses to establish and manage their online stores efficiently, with a focus on maximizing sales and enhancing the customer experience.</p>
+                        <h3>Online Shopping</h3>
+                        <p>From designing to integrating secure payment systems, I work to ensure that each online store is intuitive, attractive, and effective in converting visitors into customers. My focus is on creating online shopping environments that captivate users, providing an easy and enjoyable purchasing journey.</p>
+                    </div>
 
                     <div class="especialidades-box">
                         <i class="bi bi-file-earmark-code"></i>
-                        <h3>Web</h3>
-                        <p>As a web developer, my specialty lies in designing, developing, and maintaining websites and web applications to ensure a seamless and intuitive digital experience for users, utilizing specific programming languages and technologies.</p>
+                        <h3>Blog</h3>
+                        <p>Every blog I build is a unique platform designed to attract and engage readers from the very first click. From selecting the most suitable blogging platform to designing the layout and creating compelling content, my goal is to create blogs that stand out visually and deliver valuable and relevant content.</p>
                     </div><!--especialidades-box-->
                 </div><!--flex-->
             </div><!--interface-->
         </section><!--especialidades-->
+
+        <section class="sobre">
+            <div class="interface">
+                <div class="flex">
+                    <div class="img-sobre">
+                        <img src="images/fotooficialdoportifolio.png" alt="" width="400px">
+                    </div><!--img-sobre-->
+
+                    <div class="txt-sobre">
+                        <h2>MUITO PRAZER, <span>SOU NICOLAS FREITAS.</span></h2>
+                        <p>Olá! Sou um entusiasta de tecnologia apaixonado pela arte da programação e pela exploração dos vastos horizontes da Ciência da Computação. Atualmente, estou imerso em meus estudos, mergulhando fundo nos fundamentos e nas nuances dessa disciplina fascinante. Com uma mente curiosa e determinação incansável, estou constantemente buscando aprender novas linguagens, algoritmos e técnicas para expandir meu conhecimento e habilidades.</p>
+                        <p>Estou ansioso para aplicar o que aprendo em desafios reais e contribuir para a inovação e progresso no mundo da tecnologia. Vamos conectar e explorar juntos as infinitas possibilidades que a Ciência da Computação tem a oferecer!</p>
+                        <div class="btn-social">
+                            <a href="a"><button><i class="bi bi-instagram"></i></button></a>
+                            <a href="a"><button><i class="bi bi-github"></i></button></a>
+                            <a href="a"><button><i class="bi bi-linkedin"></i></button></a>
+                        </div>
+                    </div><!--txt-sobre-->
+                </div><!--flex-->
+            </div><!--interface-->
+        </section><!--sobre-->
     </main>
 
 </body>
