--- a/PROJETOPORTIFOLIO/PROJETOPORTIFOLIO/index.html
+++ b/PROJETOPORTIFOLIO/PROJETOPORTIFOLIO/index.html
@@ -66,7 +66,7 @@
                     </div><!--txt-topo-site-->
 
                     <div class="img-topo-site">
-                        <img src="images/exemplo.png" alt="">
+                        <img src="images/exemplo2.2.png" alt="">
 
                     </div><!--img-topo-site-->
                 </div><!--flex-->
@@ -124,9 +124,9 @@
                             progresso no mundo da tecnologia. Vamos conectar e explorar juntos as infinitas
                             possibilidades que a Ciência da Computação tem a oferecer!</p>
                         <div class="nicolas-social">
-                            <a href="a"><button><i class="bi bi-instagram"></i></button></a>
-                            <a href="a"><button><i class="bi bi-github"></i></button></a>
-                            <a href="a"><button><i class="bi bi-linkedin"></i></button></a>
+                            <a href="https://www.instagram.com/nicolasafreitas/" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
+                            <a href="https://github.com/Nicolas1545" target="_blank"><button><i class="bi bi-github"></i></button></a>
+                            <a href="https://www.linkedin.com/in/nicolas-alves-freitas-749140216/" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
                         </div><!--nicolas-social-->
                     </div><!--txt-sobre-->
                 </div><!--flex-->
@@ -174,9 +174,9 @@
                         <img src="images/Nicolas.png" alt="" width="110px">
                     </div><!--logo-footer-->
                     <div class="nicolas-social">
-                        <a href="a"><button><i class="bi bi-instagram"></i></button></a>
-                        <a href="a"><button><i class="bi bi-github"></i></button></a>
-                        <a href="a"><button><i class="bi bi-linkedin"></i></button></a>
+                        <a href="https://www.instagram.com/nicolasafreitas/" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
+                            <a href="https://github.com/Nicolas1545" target="_blank"><button><i class="bi bi-github"></i></button></a>
+                            <a href="https://www.linkedin.com/in/nicolas-alves-freitas-749140216/" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
                     </div><!--nicolas-social-->
                 </div>
             </div><!--line-footer-->
